--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "rollup": "^4.46.3",
     "serverless-http": "^3.2.0",
